# omi-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.agents_tmp/: PLAN.md
.github/workflows/: release.yml
src/omi_mcp/: __init__.py  api_client.py  models.py  server.py
src/omi_mcp/tools/: __init__.py  action_items.py  api_keys.py  conversations.py  folders.py  memories.py
